# tsugu-bangdream-bot-backend

./: .gitignore  LICENSE  README.MD  complier.bat  package-lock.json  package.json  run-trace.bat  run_cpu.bat  run_cpu2.bat  run_windows-complied.bat  run_windows.bat  组队组曲api.xlsx
MYCX_1000/: .gitignore  Output.py  Output1000.py  Output2000.py  Output500.py  README.md  app.py  base_distribution.py  base_speed_distribution.json  config.py  event_293_cutoffs.json  output.bat  predictor.py  predictorMain.bat  predictorMainWithPy.bat  requirements.txt  ycx100-3.json  ycx1000-3.json  ycx1000.json  ycx2000-3.json  ycx2000.json  ycx500-3.json  ycx500.json
config/: nickname_song.xlsx  ~$nickname_event.xlsx
src/: WorkerPool.ts  app.ts  config.ts  fuzzySearch.ts  logger.ts  readFileWorker.js  stringToNumberArrayWorker.js  toBufferWorker.js  wrapTextWorker.js
src/api/: downloadFile.ts  downloadFileCache.ts  downloader.ts  getApi.ts
src/components/: BestdoriPreview.cjs  card.ts  chart_Timeline.ts  dataBlock.ts  list.ts  skill.ts  tips.ts  title.ts
src/database/: compositionResultDB.ts  playerDB.ts
src/image/: output.ts  text.ts  utils.ts
src/routers/: calcResult.ts  gachaSimulate.ts  getCardIllustration.ts  roomList.ts  searchCard.ts  searchComposition.ts  searchEvent.ts  searchSong.ts  songChart.ts  songMeta.ts  teamBuildDetail.ts  topRateDetail.ts
src/teamBuilder/: CMakeLists.txt  calc.cpp  complier.bat  dataPrepare.ts  types.ts
src/types/: AreaItem.ts  Attribute.ts  Band.ts  Card.ts  Costume.ts  (+13 more)
预测线验证平台/: Form1.Designer.cs  Form1.cs  Program.cs  预测线验证平台.csproj
(+59 files in other folders)
